Fix Exec path in rdp-client.desktop
Updated the Exec path to use relative directories.

--- a/rdp-client.desktop
+++ b/rdp-client.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=RDP Client
 Comment=Remote Desktop Connection Client
-Exec=/home/heath/work/vpn/venv/bin/python3 /home/heath/work/vpn/rdp_client.py
+Exec=/../vpn/venv/bin/python3 /../vpn/rdp_client.py
 Icon=preferences-desktop-remote-desktop
 Terminal=false
 Categories=Network;RemoteAccess;
